custom-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: app2
  name: app2
spec:
  replicas: 4
  selector:
    matchLabels:
      app: app2
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: app2
    spec:
      containers:
      - image: registry.access.redhat.com/ubi8/httpd-24
        name: httpd-24
        resources:
          requests:
            cpu: 10m
            memory: 50Mi
          limits:
            cpu: 20m
            memory: 100Mi

status: {}
