mypod.yml
apiVersion: v1
kind: Pod
metadata:
  name: jesse-pod
spec:
  containers:
  - image: registry.access.redhat.com/ubi8/httpd-24
    name: frontend
    ports:
    - containerPort: 8080
  - image: registry.access.redhat.com/rhscl/mysql-80-rhel7
    name: backend
    ports:
    - containerPort: 3306
